// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValueButton /> should handle click event 1`] = `
<button
  className="css-ssdcv1"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as active 1`] = `
<button
  className="css-1h48rjj"
  onClick={[Function]}
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as inactive 1`] = `
<button
  className="css-ssdcv1"
  onClick={[Function]}
  value="someid"
>
  somelabel
</button>
`;
